@@ -1,4 +1,9 @@
-2005-07-21  John McCutchan  <ttb@tentacle.dhs.org>
+2005-07-21  John McCutchan  <jmc@cvs.gnome.org>
+
+	* server/gam_inotify.c: (gam_inotify_directory_handler_internal): Fix
+	locking bug.
+
+2005-07-21  John McCutchan  <jmc@cvs.gnome.org>
 
 	* server/gam_inotify.c: (gam_inotify_read_handler),
 	(gam_inotify_rm_watch), (gam_inotify_read_events): New function that
